fix wrapping of content

--- a/source/sass/blocks/main-about.scss
+++ b/source/sass/blocks/main-about.scss
@@ -204,7 +204,6 @@
   }
 
   .main-about__img {
-    width: 530px;
     height: 258px;
   }
 
@@ -261,6 +260,7 @@
     margin: 15px 0 60px 0;
     padding: 0;
     align-items: flex-end;
+    flex-wrap: wrap;
   }
 
   .main-about__advantage {
@@ -271,6 +271,7 @@
 
   .main-about__list--subdivided {
     display: flex;
+    flex-wrap: wrap;
   }
 
   .main-about__description--sundivided {
@@ -294,7 +295,6 @@
   .main-about__description--bridge {
     width: 155px;
     padding-top: 22px;
-    margin-right: 0;
     padding-right: 8px;
   }
 
