--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -5,20 +5,27 @@
   text-align: center;
   color: $main-black;
   max-width: 150px;
-  margin: 31px auto 55px;
+  margin: 31px auto 40px;
 }
 
 .page-footer__list {
   list-style: none;
   display: flex;
   justify-content: center;
-  margin: 0;
+  margin: auto;
   padding: 0;
+  flex-wrap: wrap;
+  max-width: 200px;
 }
-
+.page-footer__list-element {
+  width: 46px;
+  height: 48px;
+  background-color: $main-blue;
+  margin: auto 3px;
+}
 .page-footer__link {
   position: relative;
-  padding: 15px 22px;
+  //padding: 15px 22px;
   background-color: $main-blue;
   margin: auto 5px;
 
@@ -47,7 +54,7 @@
     width: 18px;
     height: 14px;
     top: 17px;
-    left: 15px;
+    left: 8px;
   }
 }
 
@@ -57,7 +64,7 @@
     width: 9px;
     height: 18px;
     top: 14px;
-    left: 17px;
+    left: 14px;
   }
 }
 
@@ -67,12 +74,12 @@
     width: 20px;
     height: 14px;
     top: 17px;
-    left: 10px;
+    left: 7px;
   }
 }
 
 .page-footer__wrap {
-  margin-top: 43px;
+  margin-top: 28px;
   display: flex;
   justify-content: center;
 }
@@ -102,15 +109,16 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-top: 33px;
+    margin-bottom: 40px;
   }
 
   .page-footer__wrap {
-    margin-top: 0;
+    margin-top: 13px;
   }
 
   .page-footer__heading {
-    margin-top: 40px;
-    margin-left: 10px;
+    margin: 0;
   }
 
   .page-footer__creator {
@@ -132,8 +140,8 @@
   }
 
   .page-footer__list {
-    margin-top: -14px;
-    margin-right: 13px;
+    margin: 0;
+    margin-right: 5px;
   }
 
   .page-footer__logo svg {
@@ -147,18 +155,14 @@
   }
 
   .page-footer__heading {
-    margin-left: -7px;
+    margin-left: -20px;
   }
 
   .page-footer__heading--form {
     margin-top: 50px;
   }
 
-  .page-footer__list {
-    margin-top: -10px;
-  }
-
   .page-footer__logo svg {
-    margin: -10px -5px 0 0;
+    margin: -10px -15px 0 0;
   }
 }
