--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -128,6 +128,7 @@
     background-color: $white;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
   }
 
   .page-header__element-link {
