--- a/source/sass/blocks/photo-doubts.scss
+++ b/source/sass/blocks/photo-doubts.scss
@@ -9,6 +9,8 @@
   font-weight: bold;
   line-height: 1.44;
   color: $light-black;
+  max-width: 250px;
+  margin: auto;
 }
 
 .photo-doubts__description {
