--- a/source/sass/blocks/photo-visual.scss
+++ b/source/sass/blocks/photo-visual.scss
@@ -19,6 +19,7 @@
   text-align: center;
   color: $main-black;
   margin: auto;
+  max-width: 140px;
 }
 
 .photo-visual__description {
